--- a/src/components/PointCloudHero.astro
+++ b/src/components/PointCloudHero.astro
@@ -7,7 +7,7 @@
 
   <nav id="ui-overlay" aria-label="Primary">
     <div class="ui-panel">
-      <a href="/work" class="ui-link">Projects</a>
+      <a href="/projects" class="ui-link">Projects</a>
       <a href="/about" class="ui-link">About</a>
       <a href="/contact" class="ui-link">Contact</a>
     </div>
@@ -26,7 +26,7 @@
     cleanup = await mountPointCloudHero({
       canvasId: "pc-canvas",
       wrapId: "pc-wrap",
-      autoStartDelayMs: 1800,
+      autoStartDelayMs: 500,
     });
   };
 
